# HordeForge

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  KODA.md  Makefile  README.md  README.ru.md  alembic.ini  bandit-fix-check-full.json  bandit-fix-check.json  bandit-report-full.json  bandit-report.json  bandit-target.json  cli.py  coverage.xml  debug_dod.py  debug_test.py  docker-compose.yml  hordeforge_config.py  logging_config.py  logging_utils.py  pyproject.toml  pytest_report.json  requirements-dev.txt  requirements.txt  setup.py  task_progress.md  test_dod.py
.clinerules/: 00_project.md  01_architecture.md  02_agents.md  03_code_style.md  04_testing.md  05_pipeline.md  06_github_workflow.md  07_safety.md  10_dev_loop.md  13_refactoring_rules.md  14_file_edit_rules.md  15_fix_loop_rules.md  17_import_rules.md  18_loop_prevention.md  19_stop_condition.md  97_edit_strategy.md  99_ai_behavior.md
.hordeforge_data/: artifacts.json  runs.json  step_logs.json  test_memory.json
.qwen/: settings.json  settings.json.orig
agents/: __init__.py  architecture_evaluator.py  architecture_planner.py  base.py  bdd_generator.py  benchmarks.py  ci_failure_analyzer.py  ci_incident_handoff.py  code_generator.py  code_generator_v2.py  context_utils.py  dod_extractor.py  fix_agent.py  fix_agent_v2.py  fix_loop.py  github_client.py  issue_closer.py  issue_pipeline_dispatcher.py  issue_scanner.py  language_detector.py  live_merge.py  live_review.py  llm_api.py  llm_providers.py  llm_wrapper.py  llm_wrapper_backward_compatibility.py  registry.py  (+21 more)
(+597 files in other folders)
